# sec-agent

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  api_client.py  config.py  conftest.py  main.py  models.py  prompts.py  pyproject.toml  pytest.ini  reasoning_adapter.py  requirements.txt  session_store.py  test_tool_selection.py  tools.py
docs/: demo-queries.md  test-queries.md
tests/: conftest.py  test_agent_e2e.py  test_agent_session.py  test_agent_unit.py  test_api_client.py  test_fastapi_app.py  test_parameter_extraction.py  test_reasoning_adapter.py  test_session_store.py  test_tool_selection.py  test_tool_selection_disambiguation.py  test_tool_selection_engine.py  test_tool_selection_ml.py  test_tool_selection_multi.py  test_tool_selection_multistep.py  test_tool_selection_portfolio.py  test_tool_selection_single.py  test_tool_selection_src.py  test_tools_registry.py
